--- a/app/views/tasks/_new.html.erb
+++ b/app/views/tasks/_new.html.erb
@@ -1,13 +1,6 @@
-<div class="row p-3 px-md-2">
-  <div class="col-lg-2">
-    <%= form_with model: Task.new  do |f| %>
-    <%= f.hidden_field :list_id, value: params[:id] %>
-    <div class="form-group">
-      <%= f.label "Enter what to do" %>
-      <%= f.text_field :title, class: "form-control", required: true %>
-    </div>
+<div class="form-inline">
+  <%= form_with model: Task.new  do |f| %>
+    <%= f.text_field :title, class: "form-control", placeholder: "Enter what to do", required: true %>
     <%= f.submit "Save", class: "btn btn-primary" %>
-    <%= link_to "Back", root_path, class: "btn btn-light" %>
-    <% end %>
-  </div>
+  <% end %>
 </div>
