--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,27 +1,18 @@
-
-<div class="row p-3 col px-md-4">
-  <div class="col-sm-3 p-3 border bg-light">
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">Id</th>
-          <th scope="col">Name</th>
-          <th scope="col">Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% current_user.lists.each do |d| %>
-        <tr>
-          <td><%= d.id %></td>
-          <td><%= link_to d.title, list_path(d) %></td>
-          <td><%= link_to 'Delete', list_path(d), method: :delete,
-            data: { confirm: 'Are you sure?' }, class: 'btn btn-light'%>
-              <%= link_to('Edit', edit_list_path(d), class: 'btn btn-light') %></td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-  </div>
-
-<%= render 'new' %>
+<div class="col-sm-3 p-3 border bg-light">
+  <h3>To do list</h3>
+  <ul class="list-group">
+    <% current_user.lists.each do |d| %>
+    <li class="list-group-item">
+  	  <span class="name"><%= link_to d.title, list_path(d) %></span>
+  		  <button class="btn btn-default btn-xs pull-right remove-item">
+          <%= link_to '', list_path(d), method: :delete,
+          data: { confirm: 'Are you sure?' }, class: 'glyphicon glyphicon-remove' %>
+        </button>
+        <button class="btn btn-default btn-xs pull-right edit-item">
+          <%= link_to '', edit_list_path(d), class: 'glyphicon glyphicon-cog' %>
+        </button>
+    </li>
+    <% end %>
+  </ul>
+  <%= render 'new' %>
+</div>
