--- a/app/views/lists/_new.html.erb
+++ b/app/views/lists/_new.html.erb
@@ -1,6 +1,6 @@
   <div class="form-inline">
     <%= form_with model: List.new do |f| %>
-      <%= f.text_field :title, class: "form-control form-control-sm mr-3 w-75",
+      <%= f.text_field :title, class: "form-control",
                             placeholder: "Enter new list name", required: true %>
       <%= f.submit "Save", class: "btn btn-primary" %>
     <% end %>
