--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,22 @@
   </head>
 
   <body>
-    <% flash.each do |name, msg| %>
-        <div class="alert alert-<%= name %>">
-        <%= msg %>
+    <div class="container">
+      <div class="raw">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <% flash.each do |name, msg| %>
+          <div class="alert alert-<%= name %>">
+            <%= msg %>
+          </div>
+          <% end %>
+          <%= yield %>
+        </div>
+        <div class="col-md-2"></div>
       </div>
-    <% end %>
-    <%= yield %>
+      <% if user_signed_in? %>
+        <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+      <% end %>
+    </div>
   </body>
 </html>
